# Plot2Eq

./: .dockerignore  .gitattributes  .gitignore  DATASET.md  Dockerfile  LICENSE  README.md  expression.py  generate_data.py  pyproject.toml
app/: main.py
app/templates/: index.html
checkpoints/v2/: best_model.pth
notebooks/: 02_check_dataset.ipynb  03_check_augmentation.ipynb  04_train_model.ipynb  canvas_test.py  check_data.ipynb  clean_data.ipynb
scripts/: filter_dataset.py  generate_data.py  train.py
src/: datamodule.py  dataset.py  expression.py  model.py  tokenizer.py  train.py
src/data_prep/: canonicalize.py  compile.py
src/plot2eq/: config.py
src/plot2eq/core/: expression.py  tokenizer.py
src/plot2eq/data_prep/: canonicalize.py  collisions.py  normalize.py
src/plot2eq/data_utils/: augmentation.py  datamodule.py  dataset.py
src/plot2eq/inference/: fit_constants.py  pipeline.py
src/plot2eq/models/: components.py  core_model.py  model.py
src/plot2eq/training/: logging_utils.py  trainer.py
