[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph2eq"
version = "0.1.0"
description = "Symbolic Regression Project"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "sympy",
    "matplotlib"
    "torch"
]

[tool.setuptools.packages.find]
where = ["."]