[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot2eq"
version = "1.0.0"
description = "Symbolic Regression Project"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "sympy",
    "matplotlib",
    "torch",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "pydantic",
    "pillow",
    "python-multipart"
]

[tool.setuptools.packages.find]
where = ["src"]